--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrinho - Bolos da Vovó</title>
+    <title>Bolos da Vovó</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,77 +12,65 @@
         <img src="babado.svg" alt="Cabeçalho com Babado" class="header-background">
         <div class="header-content">
             <img src="logovovo.svg" alt="Bolos da Vovó" class="logo">
-            <a href="index.html" class="voltar">Voltar à loja</a>
+            <a href="carrinho.html" class="carrinho-link">
+                <img src="carrinho.png" alt="Carrinho de Compras" class="carrinho">
+            </a>
         </div>
     </header>
 
-    <!-- Conteúdo do Carrinho -->
-    <main>
-        <h1>Seu Carrinho</h1>
-        <div class="carrinho-container">
-            <table class="carrinho-tabela">
-                <thead>
-                    <tr>
-                        <th>Produto</th>
-                        <th>Quantidade</th>
-                        <th>Preço Unitário</th>
-                        <th>Total</th>
-                        <th>Remover</th>
-                    </tr>
-                </thead>
-                <tbody id="carrinho-tabela">
-                    <tr>
-                        <td>Bolo de Chocolate</td>
-                        <td><input type="number" value="1" min="1" data-preco="30.00" class="quantidade"></td>
-                        <td>R$ 30,00</td>
-                        <td class="total-item">R$ 30,00</td>
-                        <td><button class="remover-btn">Remover</button></td>
-                    </tr>
-                    <tr>
-                        <td>Bolo de Morango</td>
-                        <td><input type="number" value="2" min="1" data-preco="25.00" class="quantidade"></td>
-                        <td>R$ 25,00</td>
-                        <td class="total-item">R$ 50,00</td>
-                        <td><button class="remover-btn">Remover</button></td>
-                    </tr>
-                    <tr>
-                        <td>Bolo de Banoffe</td>
-                        <td><input type="number" value="1" min="1" data-preco="35.00" class="quantidade"></td>
-                        <td>R$ 35,00</td>
-                        <td class="total-item">R$ 35,00</td>
-                        <td><button class="remover-btn">Remover</button></td>
-                    </tr>
-                    <tr>
-                        <td>Bolo de Limão</td>
-                        <td><input type="number" value="3" min="1" data-preco="28.00" class="quantidade"></td>
-                        <td>R$ 28,00</td>
-                        <td class="total-item">R$ 84,00</td>
-                        <td><button class="remover-btn">Remover</button></td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="total">
-                <p>Total: <span id="total-geral">R$ 199,00</span></p>
-                <button class="finalizar">Finalizar Compra</button>
+    
+   <!-- Carrossel de Bolos -->
+<main>
+    <section class="carousel">
+        <div class="carousel-header">
+            <h2>Nossos Sabores:</h2>
+        </div>
+        <div class="carousel-wrapper">
+            <button class="prev">&#10094;</button>
+            <div class="carousel-items">
+                <div class="carousel-item">
+                    <img src="chocolate.png" alt="Bolo de Chocolate">
+                    <h3>Chocolate</h3>
+                    <button>Adicionar ao Carrinho</button>
+                </div>
+                <div class="carousel-item">
+                    <img src="morango.png" alt="Bolo de Morango">
+                    <h3>Morango</h3>
+                    <button>Adicionar ao Carrinho</button>
+                </div>
+                <div class="carousel-item">
+                    <img src="banofe.png" alt="Bolo de Banoffe">
+                    <h3>Banoffe</h3>
+                    <button>Adicionar ao Carrinho</button>
+                </div>
+                <div class="carousel-item">
+                    <img src="limao.png" alt="Bolo de Limão">
+                    <h3>Limão</h3>
+                    <button>Adicionar ao Carrinho</button>
+                </div>
             </div>
+            <button class="next">&#10095;</button>
         </div>
-    </main>
+    </section>
+</main>
 
-    <!-- Rodapé -->
-    <footer>
-        <p>Siga nossas redes sociais</p>
-        <div class="social-icons">
-            <a href="https://www.instagram.com" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="Instagram">
-            </a>
-            <a href="https://www.facebook.com" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/facebook.svg" alt="Facebook">
-            </a>
-            <a href="https://www.ifood.com.br" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/ifood.svg" alt="iFood">
-            </a>
-        </div>
-    </footer>
+
+<!-- Rodapé -->
+<footer>
+    <p>Siga nossas redes sociais</p>
+    <div class="social-icons">
+        <a href="https://www.instagram.com" target="_blank">
+            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/facebook.svg" alt="Facebook">
+        </a>
+        <a href="https://www.ifood.com.br" target="_blank">
+            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/ifood.svg" alt="iFood">
+        </a>
+    </div>
+</footer>
+
 
     <script src="script.js"></script>
 </body>
