--- a/recrutamento.html
+++ b/recrutamento.html
@@ -6,6 +6,7 @@
     <title>Vaga de Emprego - Auxiliar de Confeitaria</title>
     <link rel="icon" href="logovovo.svg" type="image/x-icon">
     <link rel="stylesheet" href="recrutamento.css">
+    <script src="formulario.js" defer></script>
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -39,6 +40,7 @@
                     <li>Não exigimos experiência</li>
                 </ul>
             </div>
+            <button id="apply-btn">Candidatar-se</button>
         </section>
     </main>
 
@@ -46,7 +48,5 @@
     <footer>
         <p>&copy; 2024 Bolos da Vovó</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
