--- a/recrutamento.html
+++ b/recrutamento.html
@@ -35,7 +35,7 @@
             <div class="info">
                 <strong>Requisitos:</strong>
                 <ul>
-                    <li>Ensino médio completo ou cursando</li>
+                    <li>Ensino médio completo/cursando</li>
                     <li>Não exigimos experiência</li>
                 </ul>
             </div>
