--- a/recrutamento.html
+++ b/recrutamento.html
@@ -19,7 +19,7 @@
     <!-- Conteúdo da Vaga -->
     <main>
         <section class="job-details">
-            <h2>Detalhes da Vaga</h2>
+            <h2>Vaga de Auxiliar de Confeitaria</h2>
             <div class="info">
                 <strong>Período:</strong> Segunda a sexta-feira
             </div>
