--- a/recrutamento.html
+++ b/recrutamento.html
@@ -52,11 +52,14 @@
                 <label for="name">Nome completo:</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="birthDate">Data de Nascimento:</label>
-                <input type="text" id="birthDate" name="birthDate" placeholder="dd/mm/aaaa" required>
+                <label for="age">Idade:</label>
+                <input type="number" id="age" name="age" min="18" required>
 
                 <label for="phone">Telefone para contato:</label>
                 <input type="text" id="phone" name="phone" required>
+
+                <label for="curriculum">Anexar Currículo (opcional):</label>
+                <input type="file" id="curriculum" name="curriculum" accept=".pdf,.doc,.docx">
 
                 <button type="submit" class="btn">Enviar</button>
             </form>
